Revert "Changed language support to JDK 11"
This reverts commit 06a373e13728dd28f17ece087036941ef8ae0701.